test/parser/fail/noexprall.ang
f : forall a:Nat .
f = map S